--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,15 @@ body{
 
 }
 
+nav ul a {
+    -webkit-transition: background-color .3s;
+    transition: background-color .3s;
+    font-size: 1rem;
+    color: #444;
+    display: block;
+    padding: 0 15px;
+    cursor: pointer;
+}
 
 /*Responsive*/
 
